Sync deleted notes